fix transactions alignment with few products

--- a/src/app/admin/transactions/transactions.module.css
+++ b/src/app/admin/transactions/transactions.module.css
@@ -23,6 +23,7 @@
   display: grid;
   gap: 0.5rem;
   overflow-y: auto;
+  align-content: start;
 }
 
 .transaction {
